@@ -11,7 +11,6 @@ if (!$modx->hasPermission('remove')) {return $modx->error->failure($modx->lexico
 $id = $scriptProperties['id'];
 
 $response = $modx->runProcessor('resource/delete', $scriptProperties);
-
 if ($response->isError()) {
 	return $modx->error->failure($response->getMessage());
 }
